appId: sh.superset.mobile
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Welcome to Superset"
    timeout: 60000
- tapOn:
    id: "dev-sign-in-button"
- extendedWaitUntil:
    visible:
      id: "home-screen"
    timeout: 120000
